--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mysql": "^2.18.1",
     "react-script-tag": "^1.1.2",
     "react-tsparticles": "^1.18.10",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "string-similarity": "^4.0.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
