Fixing conflicting port, proxy server fix

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
-    "port": 5000,
+    "httpPort": 5001,
+    "httpsPort": 5000,
     "dbInfo": {
         "host": "75.88.242.11",
         "user": "notes_app_user",
