--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-logger": "0.0.3",
     "lowdb": "^1.0.0",
     "mysql": "^2.18.1",
     "react-script-tag": "^1.1.2",
